--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,11 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+/.idea/vcs.xml
 .DS_Store
 /build
+/app/release
 /captures
 .externalNativeBuild
 .cxx
-.idea/vcs.xml
+
