--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main2Activity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".Main3Activity"></activity>
+        <activity android:name=".Main2Activity" />
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait"><!--activity1 竖屏-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
