--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main5Activity" android:screenOrientation="portrait"></activity>
-        <activity android:name=".Main4Activity" android:screenOrientation="portrait"></activity>
+        <activity android:name=".ViewPagerActivity"></activity>
+        <activity
+            android:name=".Main5Activity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Main4Activity"
+            android:screenOrientation="portrait" />
         <activity android:name=".Main3Activity" />
         <activity android:name=".Main2Activity" />
         <activity
