--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,21 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ViewPagerActivity"></activity>
-        <activity
-            android:name=".Main5Activity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".Main4Activity"
-            android:screenOrientation="portrait" />
-        <activity android:name=".Main3Activity" />
-        <activity android:name=".Main2Activity" />
-        <activity
-            android:name=".MainActivity"
-            android:screenOrientation="portrait"> <!-- activity1 竖屏 -->
+        <activity android:name=".Main6Activity" android:screenOrientation="portrait" />
+        <activity android:name=".ViewPagerActivity" />
+        <activity android:name=".Main5Activity" android:screenOrientation="portrait" />
+        <activity android:name=".Main4Activity" android:screenOrientation="portrait" />
+        <activity android:name=".Main3Activity" android:screenOrientation="portrait" />
+        <activity android:name=".Main2Activity" android:screenOrientation="portrait" />
+        <activity android:name=".MainActivity" android:screenOrientation="portrait"> <!-- activity1 竖屏 -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
