--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main6Activity" android:screenOrientation="portrait" />
+        <activity android:name=".Main7Activity"
+                  android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".Main6Activity"
+            android:screenOrientation="portrait" />
         <activity android:name=".ViewPagerActivity" />
-        <activity android:name=".Main5Activity" android:screenOrientation="portrait" />
-        <activity android:name=".Main4Activity" android:screenOrientation="portrait" />
-        <activity android:name=".Main3Activity" android:screenOrientation="portrait" />
-        <activity android:name=".Main2Activity" android:screenOrientation="portrait" />
+        <activity
+            android:name=".Main5Activity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Main4Activity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Main3Activity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Main2Activity"
+            android:screenOrientation="portrait" />
         <activity android:name=".MainActivity"> <!-- activity1 竖屏 -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
