--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
-        versionName '1.8'
+        versionName '1.9beta1'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
