--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".Main9Activity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".Main8Activity"
             android:screenOrientation="portrait" />
         <activity
@@ -18,8 +21,7 @@
         <activity
             android:name=".Main6Activity"
             android:screenOrientation="portrait" />
-        <activity
-            android:name=".ViewPagerActivity" />
+        <activity android:name=".ViewPagerActivity" />
         <activity
             android:name=".Main5Activity"
             android:screenOrientation="portrait" />
