--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.example.helloandroid"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 1
-        versionName '1.9beta2'
+        versionCode 2
+        versionName '2.0'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
